Added logos, fixed typos

--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
 								<h2><a href="#">AgTech</a></h2>
 								<p style="font-size: large;">
 									&emsp;Developing and testing novel AgTech systems, specifically 3 types of
-									stationary and robotic systems: an irrigation system which incorporates water
-									resource management,
+									stationary and robotic systems:
 								<ul style="text-align: left;">
-									<li>an irrigation system which incorporates water resource management</li>
+									<li>An irrigation system which incorporates water resource management</li>
 
 									<li>A scalable robotcis design and prototype that can accurately assess and identify
 										disease and pests while supporting environmental decision-making on fertilizer
@@ -198,6 +197,7 @@
 							<p>
 							</p>
 						</section>
+						<img style="width:100%;" src="images/logos.png" alt="" />
 					</div>
 				</div>
 			</div>
@@ -210,19 +210,19 @@
 				<div class="col-12">
 
 					<!-- About -->
+
 					<section id="contact">
 						<h2 class="major"><span>Contact us</span></h2>
 						<p>
 							PI: Thomas Harmon <br>
 							Professor, Civil & EnvironmentalEngineering<br>
 							University of California, Merced<br>
-							tharmon@ucmerced.edu
+							laca@ucmerced.edu
 						</p>
 					</section>
-
 				</div>
-			</div>
 
+			</div>
 			<!-- Copyright -->
 			<div id="copyright">
 				<ul class="menu">
