removed news tab

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 			<ul>
 				<li class="current"><a href="index.html">Home</a></li>
 				<li> <a href="people">People</a> </li>
-				<li> <a href="news">News</a> </li>
-
+				<!-- <li> <a href="news">News</a> </li> -->
 			</ul>
 		</nav>
 
