Added Pictures. Updated CSV Parser

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</header>
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index.html">Home</a></li>
+				<li class="current"><a href="index">Home</a></li>
 				<li> <a href="people">People</a> </li>
 				<!-- <li> <a href="news">News</a> </li> -->
 			</ul>
@@ -57,7 +57,7 @@
 							</p>
 
 						</section>
-						<img style="width:100%;" class="image featured" src="images/banners/tractor.jpg" alt="" />
+						<img style="width:100%;" class="image featured" src="images/banners/banner.png" alt="" />
 
 						<section class="box feature">
 							<h2 class="major2"><span>Research</span></h2>
@@ -65,8 +65,13 @@
 								LACA is divided into 4 research thrusts, AgTech, Labor impact, Environmental impact,
 								and Underlying and emerging problems.
 							</p>
+							<hr>
 							<section class="box feature">
-								<h2><a href="#">AgTech</a></h2>
+								<h2>AgTech</h2>
+								<!-- PICTURE -->
+
+								<img style=width:75%; class="image" src="images/agplant.jpg" alt="" />
+
 								<p style="font-size: large;">
 									&emsp;Developing and testing novel AgTech systems, specifically 3 types of
 									stationary and robotic systems:
@@ -96,8 +101,10 @@
 										information. </li>
 								</ul> -->
 							</section>
+							<hr>
 							<section class="box feature">
-								<h2><a href="#">Labor Impact</a></h2>
+								<h2>Labor Impact</h2>
+								<img style=width:75%; class="image" src="images/banners/tractor.jpg" alt="" />
 								<p>
 									The aim of this thrust is to understand AgTech adoption by farmers, the impact
 									of <br>adoption on farm labor, and the greater effect of the AgTech-Labor model on
@@ -105,8 +112,12 @@
 
 								</p>
 							</section>
+							<hr>
 							<section class="box post">
-								<h2><a href="#">Environmental impact</a></h2>
+
+								<h2>Environmental impact</h2>
+								<img style=width:50%; class="image" src="images/banners/plant.jpg" alt="" />
+
 								<p>
 									Our aim is to integrate environmental sustainability scaffolding into our
 									AgTech-Labor model to <br> enhance agrifood system resilience by protecting and
@@ -114,8 +125,9 @@
 								</p>
 
 							</section>
+							<hr>
 							<section class="box post">
-								<h2><a href="#">Underlying and emerging problems</a></h2>
+								<h2>Underlying and emerging problems</h2>
 								<p style="text-align: left;">
 									&emsp;As we collaboratively design the AgTech-Labor model, we anticipate the
 									emergence
@@ -134,7 +146,7 @@
 							<div>
 								<div class="row">
 									<section class="box feature">
-										<h2><a href="#">k-12</a></h2>
+										<h2>k-12 Engagement</h2>
 										<p>
 											LACA will offer day camps for middle school students. The  day  camps  will 
 											include  STEM 
@@ -146,7 +158,10 @@
 											students for
 											children of migrant workers.
 										</p>
-										<h2><a href="#">LACA undergraduate student opportunities</a></h2>
+										<img src="images/projects/nexttech.jpg" alt="" />
+										<br>
+										<br>
+										<h2>LACA undergraduate student opportunities</h2>
 										<ul style="text-align: left;">
 											<li>
 												<b>First year seminars:</b> LACA faculty will provide seminars to first
@@ -162,8 +177,8 @@
 											</li>
 											<li>
 												<b>Community  College  Bridge  Program:</b> LACA will partner on a newly
-												fundedUSDA Research and Extension
-												Experiences for Undergraduates (REEU) in 2020 entitled San Joaquin
+												funded USDA Research and Extension Experiences for Undergraduates (REEU)
+												in 2020 entitled San Joaquin
 												Valley Food and Agriculture Cyberinformatics Tools and Science (FACTS)
 												Bridge
 
@@ -181,7 +196,6 @@
 								</div>
 							</div>
 						</section>
-						<hr>
 						<section class="box highlight">
 							<header>
 								<h2 class="major2">Outcomes</h2>
