Added News Page to LACA, Updated LACA Home page

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 		<header id="header">
 			<div class="logo container">
 				<div>
-					<h1><a href="index" id="logo"></a></h1>
-					<p><strong>LACA: </strong>Labor and Automation in California Agriculture </p>
+					<h1><a href="index" id="logo"></a>Labor and Automation in California Agriculture</h1>
 				</div>
 			</div>
 		</header>
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index">Home</a></li>
-				<li> <a href="people">People</a> </li>
-				<!-- <li> <a href="news">News</a> </li> -->
+				<li><a href="index">Home</a></li>
+				<li><a href="people">People</a></li>
+				<li><a href="news">News</a></li>
 			</ul>
 		</nav>
 
@@ -161,27 +160,26 @@
 										<img src="images/projects/nexttech.jpg" alt="" />
 										<br>
 										<br>
-										<h2>LACA undergraduate student opportunities</h2>
+										<h2>Education opportunities</h2>
 										<ul style="text-align: left;">
 											<li>
-												<b>First year seminars:</b> LACA faculty will provide seminars to first
-												year college students on
+												<b>First-year seminars:</b> LACA faculty will provide seminars to
+												first-year college students on
 												resilient and equitable food systems with intercampus and extramural
 												guest appearances.
 											</li>
 											<li>
-												<b>Undergraduate research experiences:</b> LACA will coordinate academic
-												year and summer paid internships
-												spanning LACA research and partner practitioners in AgTech, labor, and
-												environmental areas.
+												<b>Undergraduate research experiences:</b> LACA will coordinate
+												academic-year and summer paid internships
+												spanning LACA research and partner practitioners in AgTech, Labor, and
+												Environmental research thrust areas.
 											</li>
 											<li>
-												<b>Community  College  Bridge  Program:</b> LACA will partner on a newly
+												<b>Community College Bridge Program:</b> LACA will partner on a newly
 												funded USDA Research and Extension Experiences for Undergraduates (REEU)
-												in 2020 entitled San Joaquin
+												in 2020 entitled <a href="https://citris.ucmerced.edu/facts" target="_blank">San Joaquin
 												Valley Food and Agriculture Cyberinformatics Tools and Science (FACTS)
-												Bridge
-
+												Bridge</a>
 											</li>
 											<li>
 												<b>Cross-Campus General Education Course:</b> An upper division general
@@ -189,7 +187,6 @@
 												remotely during a 10-week quarter to accommodate all campuses, with a
 												segment scheduled for the UC spring break period to allow for a 3-day
 												field trip to farm facilities in the San Joaquin Valley.
-
 											</li>
 										</ul>
 									</section>
