--- a/people.html
+++ b/people.html
@@ -15,14 +15,15 @@
             <div class="logo container">
                 <div>
                     <h1><a href="index.html" id="logo"></a></h1>
-                    <p><strong>LACA: </strong>Labor and Automation in California Agriculture </p>
+                    <p>Labor and Automation in California Agriculture </p>
                 </div>
             </div>
         </header>
         <nav id="nav">
             <ul>
-                <li class="current"><a href="index">Home</a></li>
+                <li> <a href="index">Home</a></li>
                 <li> <a href="people">People</a> </li>
+				<li> <a href="news">News</a> </li>
             </ul>
         </nav>
         <div
