Updated Main Page. Left Justify. Changed Header style
Added more information for each thrust

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Labor and Automation in California Agriculture </title>
+	<link rel="icon" href="images/favicon.png">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,10 +42,10 @@
 			<div class="container">
 				<div class="row gtr-200">
 					<div class="col-12">
-						<section class="box feature">
+						<section class="box post">
 							<h2 class="major2"><span>Labor and Automation in California Agriculture</span></h2>
 							<p>
-								California is the fifth largest economy in the world, a global leader in technology, and
+								<!-- California is the fifth largest economy in the world, a global leader in technology, and
 								the nation’s most agriculturally diverse and productive state, and yet its food system
 								is vulnerable to climate change, regulatory change, water availability, and unexpected
 								events such as the recent COVID-19 pandemic.  The Labor and Automation in California
@@ -52,39 +53,64 @@
 								Agriculture & Natural Resources (ANR) that strives to create a new model for
 								agricultural technology. By partnering with farmers, workers, and agriculturists, LACA
 								hopes to create a model that supports farmers and workers, while enhancing productivity
-								and environmental sustainability.
+								and environmental sustainability. -->
+								Funded in 2021 by the University of California Office of the President Multi-Campus
+								Research Program Initiative, the Labor and Automation in California Agriculture (LACA)
+								assembles interdisciplinary researchers to solve food system resilience and
+								human-centered agriculture technology to transform the workforce and environment of the
+								future. This MRPI includes researchers from University of California Mercerd, Berkeley,
+								Davis, and Riverside.
 							</p>
 
 						</section>
 						<img style="width:100%;" class="image featured" src="images/banners/banner.png" alt="" />
 
-						<section class="box feature">
+						<section class="box post">
 							<h2 class="major2"><span>Research</span></h2>
-							<p style="font-size:larger">
-								LACA is divided into 4 research thrusts, AgTech, Labor impact, Environmental impact,
-								and Underlying and emerging problems.
-							</p>
+
+							The LACA team is focused on four research thrusts:
+
+
+							<ul>
+								<li>
+									AgTech: developing cutting-edge technology systems to monitor and manage resources
+									and applications
+								</li>
+								<li>
+									Labor Impacts: engaging socio-economic factors for incorporation of new technologies
+								</li>
+								<li>
+									Environmental Impacts:
+								</li>
+								<li>
+									Underlying and Emerging Problems
+								</li>
+							</ul>
 							<hr>
-							<section class="box feature">
-								<h2>AgTech</h2>
-								<!-- PICTURE -->
+							<section class="box post">
+								<!-- <h2 style="font-size: 300%; text-align: center;">AgTech</h2> -->
+								<h4>AgTech</h4>
+								<img style=width:100%; class="image" src="images/agplant.jpg" alt="" />
+								<br>
+								<br>
+								<div>
+									The AgTech thrust involves developing and testing novel Agricultural technology
+									systems, specifically 3 types of stationary and robotic systems:
+									<ul>
+										<li><b>Multi-modal Precision Irrigation:</b> An irrigation system which
+											incorporates water resource management</li>
 
-								<img style=width:75%; class="image" src="images/agplant.jpg" alt="" />
+										<li><b>Remote Sample Acquisition and Analysis:</b> A scalable robotcis design
+											and
+											prototype that can accurately assess and
+											identify disease and pests while supporting environmental decision-making on
+											fertilizer and pesticide application</li>
 
-								<p style="font-size: large;">
-									&emsp;Developing and testing novel AgTech systems, specifically 3 types of
-									stationary and robotic systems:
-								<ul style="text-align: left;">
-									<li>An irrigation system which incorporates water resource management</li>
-
-									<li>A scalable robotcis design and prototype that can accurately assess and identify
-										disease and pests while supporting environmental decision-making on fertilizer
-										and pesticide application</li>
-
-									<li>An autonomous decision-making system that
-										can support agricultural task assignment decisions. </li>
-								</ul>
-								</p>
+										<li><b>Decision Making for Shared Autonomy in the Field:</b> An autonomous
+											decision-making system that
+											can support agricultural task assignment decisions. </li>
+									</ul>
+								</div>
 								<!-- <ul style="text-align: left;">
 									<li>A multi-modal irrigation participatory design case study and prototype with
 										links to water resource management and assessments of economic and labor
@@ -101,42 +127,85 @@
 								</ul> -->
 							</section>
 							<hr>
-							<section class="box feature">
-								<h2>Labor Impact</h2>
-								<img style=width:75%; class="image" src="images/banners/tractor.jpg" alt="" />
-								<p>
+							<section class="box post">
+								<h4>Labor Impact</h4>
+								<div style="text-align: center;">
+									<img style="width:75%;" class="image" src="images/banners/tractor.jpg" alt="" />
+								</div>
+								<br>
+								<br>
+								<div>
 									The aim of this thrust is to understand AgTech adoption by farmers, the impact
-									of <br>adoption on farm labor, and the greater effect of the AgTech-Labor model on
-									the California labor market. 
+									of adoption on farm labor, and the greater effect of the AgTech-Labor model on
+									the California labor market.
+									<ul>
+										<li><b>AgTech Adoption:</b> Synthesize AgTech adoption criteria into best
+											practices for
+											laborers, farmers and AgTech developers by characterizing AgTech adoption
+											barriers and conducting research interviews with farmers.</li>
 
-								</p>
+										<li><b>Impacts on Labor:</b> We will produce three inductive qualitative case
+											studies
+											on the adoption of the digital technologies in three crops or animal
+											production. These case studies will be based upon semi-structured
+											interviews, participant observation, and participatory research methods.
+										</li>
+
+										<li><b>Labor Markets:</b> Develop a better quantitative and qualitative
+											understanding
+											of the emerging AgTech labor market.</li>
+									</ul>
+								</div>
 							</section>
 							<hr>
 							<section class="box post">
-
-								<h2>Environmental impact</h2>
-								<img style=width:50%; class="image" src="images/banners/plant.jpg" alt="" />
-
-								<p>
+								<h4>Environmental impact</h4>
+								<div style="text-align: center;">
+									<img style=width:50%; class="image" src="images/banners/plant.jpg" alt="" />
+								</div>
+								<br>
+								<br>
+								<div>
 									Our aim is to integrate environmental sustainability scaffolding into our
-									AgTech-Labor model to <br> enhance agrifood system resilience by protecting and
+									AgTech-Labor model to enhance agrifood system resilience by protecting and
 									regenerating soil, air, water, and agroecoystems in perpetuity.
-								</p>
 
+									<ul>
+										<li><b>Water Resources Management:</b>Tools for transforming irrigation data
+											to inform the net farm water use, salinity changes and
+											storage, evapotranspiration, groundwater recharge, and assessments of
+											economic and labor implications.</li>
+
+										<li><b>Soil Fertility and Regenerative Agriculture:</b> AgTech-Environmental
+											tools to
+											monitor and sample for carbon and inform soil regeneration strategies.</li>
+
+										<li><b>Biodiversity in Agricultural Landscapes:</b> AgTech-Environmental tools
+											to integrate aerial and ground-based imagery, acoustic, and
+											physical-chemical
+											data to assess biodiversity and crop health</li>
+									</ul>
+									<!--TODO: add the researchers to each thrust Researchers:  -->
+								</div>
 							</section>
 							<hr>
 							<section class="box post">
-								<h2>Underlying and emerging problems</h2>
-								<p style="text-align: left;">
-									&emsp;As we collaboratively design the AgTech-Labor model, we anticipate the
-									emergence
-									of important issues implicating
-									existing policy questions and debates. How these questions are framed and
-									resolved will substantially influence the
-									pace and character of the adoption of AgTech and its transformative effects for
-									California’s agricultural, labor, and
-									environmental sectors.
-								</p>
+								<h4>Underlying and emerging problems</h4>
+								<div>
+									As we collaboratively design the AgTech-Labor model, we anticipate the
+									emergence of important issues implicating existing policy questions and debates. How
+									these questions are framed and
+									resolved will substantially influence the pace and character of the adoption of
+									AgTech and its transformative effects for
+									California’s agricultural, labor, and environmental sectors.
+									<!-- <ul>
+										<li><b>Intelligent Tools and Systems:</b> </li>
+
+										<li><b>Socioeconomic impacts:</b> </li>
+
+										<li><b>LACA Seed Grant Program:</b>  </li>
+									</ul> -->
+								</div>
 							</section>
 						</section>
 
@@ -146,7 +215,7 @@
 								<div class="row">
 									<section class="box feature">
 										<h2>k-12 Engagement</h2>
-										<p>
+										<p style="text-align: left;">
 											LACA will offer day camps for middle school students. The  day  camps  will 
 											include  STEM 
 											activities  (based  on the CITRIS Robotics curriculum) and will be
@@ -177,9 +246,11 @@
 											<li>
 												<b>Community College Bridge Program:</b> LACA will partner on a newly
 												funded USDA Research and Extension Experiences for Undergraduates (REEU)
-												in 2020 entitled <a href="https://citris.ucmerced.edu/facts" target="_blank">San Joaquin
-												Valley Food and Agriculture Cyberinformatics Tools and Science (FACTS)
-												Bridge</a>
+												in 2020 entitled <a href="https://citris.ucmerced.edu/facts"
+													target="_blank">San Joaquin
+													Valley Food and Agriculture Cyberinformatics Tools and Science
+													(FACTS)
+													Bridge</a>
 											</li>
 											<li>
 												<b>Cross-Campus General Education Course:</b> An upper division general
@@ -197,7 +268,7 @@
 							<header>
 								<h2 class="major2">Outcomes</h2>
 							</header>
-							<p>
+							<p style="text-align: left;">
 								The LACA AgTech-Labor model will launch California farms
 								to the forefront of resiliency and equity and empower a next generation labor force that
 								understands and
@@ -225,7 +296,7 @@
 						<h2 class="major"><span>Contact us</span></h2>
 						<p>
 							PI: Thomas Harmon <br>
-							Professor, Civil & EnvironmentalEngineering<br>
+							Professor, Civil & Environmental Engineering<br>
 							University of California, Merced<br>
 							laca@ucmerced.edu
 						</p>
