--- a/people.html
+++ b/people.html
@@ -14,8 +14,8 @@
         <header id="header">
             <div class="logo container">
                 <div>
-                    <h1><a href="index.html" id="logo"></a></h1>
-                    <p>Labor and Automation in California Agriculture </p>
+                    <h1><a href="index.html" id="logo"></a>Labor and Automation in California Agriculture</h1>
+                    
                 </div>
             </div>
         </header>
@@ -23,7 +23,7 @@
             <ul>
                 <li> <a href="index">Home</a></li>
                 <li> <a href="people">People</a> </li>
-				<li> <a href="news">News</a> </li>
+                <li> <a href="news">News</a> </li>
             </ul>
         </nav>
         <div
@@ -31,14 +31,14 @@
             <h2 style="color:white;">&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;Site under construction!</h2>
         </div>
         <!-- Banner -->
-        <section id="banner">
+        <!-- <section id="banner">
             <div class="content">
                 <h2>Why LACA?</h2>
                 <p>This MRPI will focus on food system resilience and the emergent role of human-centered agricultural
                     technology (agritech) </p>
                 <a href="index/#main" class="button scrolly">See Our Approach</a>
             </div>
-        </section>
+        </section> -->
 
         <!-- Main -->
         <section id="main">
@@ -47,7 +47,7 @@
                     <div class="col-12">
                         <section id="people">
                         </section>
-						<img style="width:100%;" src="images/logos.png" alt="" />
+                        <img style="width:100%;" src="images/logos.png" alt="" />
 
                     </div>
                 </div>
@@ -63,24 +63,25 @@
         <div class="container">
             <div class="row gtr-200">
                 <div class="col-12">
-
-                    <!-- About -->
                     <section id="contact">
                         <h2 class="major"><span>Contact us</span></h2>
                         <p>
-                            CONTACT
+                            PI: Thomas Harmon <br>
+                            Professor, Civil & Environmental Engineering<br>
+                            University of California, Merced<br>
+                            laca@ucmerced.edu
                         </p>
                     </section>
-
                 </div>
             </div>
+        </div>
 
-            <!-- Copyright -->
-            <div id="copyright">
-                <ul class="menu">
-                    <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved;</li>
-                </ul>
-            </div>
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul class="menu">
+                <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved;</li>
+            </ul>
+        </div>
         </div>
     </footer>
 
@@ -109,7 +110,7 @@
                             $("#people").append(
                                 $.parseHTML(
                                     '<section class="box highlight"><h2 class="major2">' +
-                                    '<span>'+ data[i].LNAME +'</span></h2><div class="row">'
+                                    '<span>' + data[i].LNAME + '</span></h2><div class="row">'
                                 )
                             );
                             break;
