--- a/people.html
+++ b/people.html
@@ -26,10 +26,10 @@
                 <li> <a href="news">News</a> </li>
             </ul>
         </nav>
-        <div
+        <!-- <div
             style="position:fixed;width:500px;height:40px;left:-75px;top:100px; transform: rotate(-45deg);z-index:10000;background-color:lightcoral;">
             <h2 style="color:white;">&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;Site under construction!</h2>
-        </div>
+        </div> -->
         <!-- Banner -->
         <!-- <section id="banner">
             <div class="content">
