--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
 									Labor Impacts: engaging socio-economic factors for incorporation of new technologies
 								</li>
 								<li>
-									Environmental Impacts:
+									Environmental Impacts: create an agricultural model that incorporates data from
+									AgTech for more sustainable farming practices
 								</li>
 								<li>
-									Underlying and Emerging Problems
+									Underlying and Emerging Problems: deals with policy and labor related issues that
+									may arise during the course of the LACA research
 								</li>
 							</ul>
 							<hr>
@@ -100,9 +102,8 @@
 										<li><b>Multi-modal Precision Irrigation:</b> An irrigation system which
 											incorporates water resource management</li>
 
-										<li><b>Remote Sample Acquisition and Analysis:</b> A scalable robotcis design
-											and
-											prototype that can accurately assess and
+										<li><b>Remote Sample Acquisition and Analysis:</b> A scalable robotics design
+											and prototype that can accurately assess and
 											identify disease and pests while supporting environmental decision-making on
 											fertilizer and pesticide application</li>
 
@@ -171,7 +172,7 @@
 									regenerating soil, air, water, and agroecoystems in perpetuity.
 
 									<ul>
-										<li><b>Water Resources Management:</b>Tools for transforming irrigation data
+										<li><b>Water Resources Management:</b> Tools for transforming irrigation data
 											to inform the net farm water use, salinity changes and
 											storage, evapotranspiration, groundwater recharge, and assessments of
 											economic and labor implications.</li>
@@ -183,7 +184,7 @@
 										<li><b>Biodiversity in Agricultural Landscapes:</b> AgTech-Environmental tools
 											to integrate aerial and ground-based imagery, acoustic, and
 											physical-chemical
-											data to assess biodiversity and crop health</li>
+											data to assess biodiversity and crop health.</li>
 									</ul>
 									<!--TODO: add the researchers to each thrust Researchers:  -->
 								</div>
@@ -250,7 +251,7 @@
 													target="_blank">San Joaquin
 													Valley Food and Agriculture Cyberinformatics Tools and Science
 													(FACTS)
-													Bridge</a>
+													Bridge.</a>
 											</li>
 											<li>
 												<b>Cross-Campus General Education Course:</b> An upper division general
