Added researchers under each thrust

--- a/index.html
+++ b/index.html
@@ -73,18 +73,22 @@
 
 							<ul>
 								<li>
-									AgTech: developing cutting-edge technology systems to monitor and manage resources
+									<b>AgTech:</b> developing cutting-edge technology systems to monitor and manage
+									resources
 									and applications
 								</li>
 								<li>
-									Labor Impacts: engaging socio-economic factors for incorporation of new technologies
+									<b>Labor Impacts:</b> engaging socio-economic factors for incorporation of new
+									technologies
 								</li>
 								<li>
-									Environmental Impacts: create an agricultural model that incorporates data from
+									<b>Environmental Impacts:</b> create an agricultural model that incorporates data
+									from
 									AgTech for more sustainable farming practices
 								</li>
 								<li>
-									Underlying and Emerging Problems: deals with policy and labor related issues that
+									<b>Underlying and Emerging Problems:</b> deals with policy and labor related issues
+									that
 									may arise during the course of the LACA research
 								</li>
 							</ul>
@@ -111,24 +115,13 @@
 											decision-making system that
 											can support agricultural task assignment decisions. </li>
 									</ul>
+									<p>
+										<b>Researchers:</b> Konstantinos Karydis (lead), Amit Roy-Chowdhury, Erin
+										Hestir, Stefano Carpin, Joshua Viers, Peggy Mauk
+									</p>
 								</div>
-								<!-- <ul style="text-align: left;">
-									<li>A multi-modal irrigation participatory design case study and prototype with
-										links to water resource management and assessments of economic and labor
-										implications.</li>
 
-									<li>A scalable robotics participatory design case study and prototype that can
-										offer accurate, on-demand identification of disease or its precursors while
-										supporting environmental decision-making (e.g. fertilizer and pesticide
-										application), and assessments of economic and labor implications.</li>
-
-									<li>An autonomous decision-making system design case study and prototype that
-										can support agricultural task assignment decisions with on-demand
-										information. </li>
-								</ul> -->
-							</section>
-							<hr>
-							<section class="box post">
+								<hr>
 								<h4>Labor Impact</h4>
 								<div style="text-align: center;">
 									<img style="width:75%;" class="image" src="images/banners/tractor.jpg" alt="" />
@@ -156,10 +149,14 @@
 											understanding
 											of the emerging AgTech labor market.</li>
 									</ul>
+									<p>
+										<b>Researchers:</b> Martin Kenney (lead), Anne Visser, David Zilberman, Peggy
+										Mauk
+									</p>
 								</div>
-							</section>
-							<hr>
-							<section class="box post">
+
+								<hr>
+
 								<h4>Environmental impact</h4>
 								<div style="text-align: center;">
 									<img style=width:50%; class="image" src="images/banners/plant.jpg" alt="" />
@@ -186,11 +183,14 @@
 											physical-chemical
 											data to assess biodiversity and crop health.</li>
 									</ul>
-									<!--TODO: add the researchers to each thrust Researchers:  -->
+									<p>
+										<b>Researchers:</b> Colleen Naughton (lead), Thomas Harmon, Erin
+										Hestir, Joshua Viers, Tapan Pathak
+									</p>
 								</div>
-							</section>
-							<hr>
-							<section class="box post">
+
+								<hr>
+
 								<h4>Underlying and emerging problems</h4>
 								<div>
 									As we collaboratively design the AgTech-Labor model, we anticipate the
@@ -198,7 +198,7 @@
 									these questions are framed and
 									resolved will substantially influence the pace and character of the adoption of
 									AgTech and its transformative effects for
-									California’s agricultural, labor, and environmental sectors.
+									California’s agricultural, labor, and environmental sectors.<br><br>
 									<!-- <ul>
 										<li><b>Intelligent Tools and Systems:</b> </li>
 
@@ -206,6 +206,9 @@
 
 										<li><b>LACA Seed Grant Program:</b>  </li>
 									</ul> -->
+									<p>
+										<b>Researchers:</b> John Zysman(lead), Brandie Nonnecke, John Cioffi, Peggy Mauk, Tapan Pathak
+									</p>
 								</div>
 							</section>
 						</section>
